--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -11,7 +11,88 @@
 </head>
 
 <body>
-  <div class="footer containter">
+
+  <div class="container">
+    <div class="search-nav row">
+      <div class="col">
+        <nav class="navbar navbar-light br-0">
+          <button class="navbar-toggler" type="button"        aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </nav>
+      </div>
+      <div class="col search-logo">
+        <img src="../images/cinch(black).png" alt="Cinch Logo">
+      </div>
+      <div class="col search-membership-buttons">
+        <form class="form-inline col">
+          <button class="btn btn-light nav-link border-0 rounded-0">Login</button>
+          <button class="btn nav-link border-0 rounded-0">Sign Up</button>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label for="inputSport">Sport</label>
+            <select id="inputSport" class="form-control">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputType">Type</label>
+            <select id="inputType" class="form-control">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputCity">Location</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="inputZip">Start Date</label>
+            <input type="date" class="form-control" id="inputZip">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-dark">Search</button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="row">
+      <div class="container">
+        <div class="text-center">
+          <div class="col col-md-4">
+            <div class="row">
+              <img src="../images/Arsenal_FC.svg.png">
+            </div>
+            <div class="row">
+              <span>ARSENAL FC</span>
+            </div>
+          </div>
+          <div class="col col-md-4">
+            <h3>SOCCER CAMP</h3>
+            <span>July 20-24 9am-3pm</span>
+            <span>Ages 5-14</span>
+            <span>@ Mirasol Park</span>
+          </div>
+          <div class="col col-md-4">
+             Arsenal FC offers players a unique look into how to train the Arsenal Way.
+          </div>
+          <div class="col col-md-4">
+            <div class="col">
+              $599
+            </div>
+            <div class="col">
+              <button class="btn btn-dark">Select</button>
+            </div>  
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col">
         <div class="col">
