fixed footer on different pages

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -126,49 +126,66 @@
         </ul>
       </div>
     </div>
-    <div class="row">
-      <div class="footer containter">
-        <div class="row">
-          <div class="col">
-            <div class="col">
-              <div class="list-group">
-                <span>Cinch Sports </span>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
-              </div>
+    <div class="footer m-5 containter-fluid">
+      <div class="row mx-5 justify-content-around">
+        <div class="col mx-5">
+          <div class="list-group">
+            <span class="list-group-item border-0">Cinch Sports </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="list-group">
+            <span class="list-group-item border-0">Help </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="list-group">
+            <span class="list-group-item border-0">More </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Partners</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Affiliate Program</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Donate</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Cinch Sportswear</a>
+          </div>
+        </div>
+        <div class="container col col-md-4 offset-md-1 justify-content-start">
+          <div class="row">
+            follow us
+          </div>
+          <div class="d-flex align-self-center row">
+            <div class="col-sm-1">
+              <img src="../images/Twitter Icon.png" alt="Twitter">
             </div>
-            <div class="col">
-              <div class="list-group">
-                <span>Help </span>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
-              </div>
+            <div class="col-sm-1">
+              <img src="../images/Facebook Icon.png" alt="Facebook">
             </div>
-            <div class="col">
-              <div class="list-group">
-                <span>More </span>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Partners</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Affiliate Program</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Donate</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Sportswear</a>
-              </div>
+            <div class="col-sm-1">
+              <img src="../images/Google Icon.png" alt="Google Plus">
+            </div>
+            <div class="col-sm-1">
+              <img src="../images/Tumblr Icon.png" alt="Tumblr">
             </div>
           </div>
-          <div class="col col-md-6">
-            <form>
-              <div class="form-inline row">
-                <div class="col-md-6 mb-3">
-                  <label for="Subscribe">Subscribe</label>
-                  <input type="email" class="form-control" id="homepage-subscribe-email" placeholder="Enter Your Email">
+          <form class="row">
+            <div class="row">
+              <div class="col mb-3">
+                <label for="subscribe">Subscribe</label>
+                <div class="input-group">
+                  <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-dark rounded-0">SIGN UP</button>
+                  </span>
                 </div>
-                <button type="submit" class="btn btn-dark">SIGN UP</button>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
