--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -8,97 +8,115 @@
     <link href="../style/master.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container-fluid homepage-background">
-      <nav class="navbar navbar-expand-lg row justify-content-center">
+    <div class="container-fluid homepage-background bg-dark img-fluid">
+      <nav class="navbar navbar-expand-lg row py-5 offset-md-1 justify-content-center">
         <div class="col">
-          <a href="#" class="navbar-brand align-self-center">
+          <a href="#" class="navbar-brand align-self-center mx-5">
             <img src="../images/cinch(white).png" alt="Cinch Logo">
           </a>
         </div>
-        <div class="collapse navbar-collapse col-6" id="navbarNavAltMarkup">
+        <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Products</a>
+            <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Home</a>
+            <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Features</a>
+            <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Products</a>
           </div>
         </div>
         <form class="form-inline col">
-          <button class="btn btn-light nav-link border-0 rounded-0">Login</button>
-          <button class="btn btn-outline-light nav-link border-0 rounded-0">Sign Up</button>
+          <button class="btn btn-light px-5 nav-link border-0 rounded-0">Login</button>
+          <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0">Sign Up</button>
         </form>
       </nav>
-
-      <div class="container justify-content-center text-center">
+      <div class="container justify-content-center text-center" style="margin-top: 90px">
         <div class="row">
           <div class="col"> 
-            <h1 class="homepage-tagline">Welcome to</h1>
+            <h1 class="homepage-tagline text-white">Welcome to</h1>
           </div> 
         </div>
         <div class="row">
           <div class="col"> 
-            <h1 class="homepage-tagline">Cinch Sports</h1>
+            <h1 class="homepage-tagline text-white">Cinch Sports</h1>
           </div> 
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center m-3">
           <form>
             <div class="form-row">
-              <div class="col-6">
+              <div class="col-6 px-0 my-3">
                 <input type="text" class="form-control rounded-0" placeholder="Organization Name">
               </div>
-              <div class="col-2">
+              <div class="col-2 px-0 my-3">
                 <input type="text" class="form-control rounded-0" placeholder="Select Sport">
               </div>
-              <div class="col-2">
+              <div class="col-2 px-0 my-3">
                 <input type="text" class="form-control rounded-0" placeholder="Activity Type">
               </div>
-              <div class="col-2">
+              <div class="col-2 px-0 my-3">
                 <input type="text" class="form-control rounded-0" placeholder="City or Zip">
               </div>
             </div>
-            <button class="submit btn btn-lg btn-light" type="submit">Search</button>
+            <button class="submit btn w-50 btn-light px-4 rounded-0 my-4" type="submit">Search</button>
           </form>
         </div>
       </div>
     </div>
-    <div class="footer containter">
-      <div class="row">
-        <div class="col">
-          <div class="col">
-            <div class="list-group">
-              <span>Cinch Sports </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="list-group">
-              <span>Help </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="list-group">
-              <span>More </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Partners</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Affiliate Program</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Donate</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Sportswear</a>
-            </div>
+    <div class="footer m-5 containter-fluid">
+      <div class="row mx-5 justify-content-around">
+        <div class="col mx-5">
+          <div class="list-group">
+            <span class="list-group-item border-0">Cinch Sports </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
           </div>
         </div>
-        <div class="col col-md-6">
-          <form>
-            <div class="form-inline row">
-              <div class="col-md-6 mb-3">
-                <label for="Subscribe">Subscribe</label>
-                <input type="email" class="form-control" id="homepage-subscribe-email" placeholder="Enter Your Email">
+        <div class="col">
+          <div class="list-group">
+            <span class="list-group-item border-0">Help </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="list-group">
+            <span class="list-group-item border-0">More </span>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Partners</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Affiliate Program</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Donate</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Cinch Sportswear</a>
+          </div>
+        </div>
+        <div class="container col col-md-4 offset-md-1 justify-content-start">
+          <div class="row">
+            follow us
+          </div>
+          <div class="d-flex align-self-center row">
+            <div class="col-sm-1">
+              <img src="../images/Twitter Icon.png" alt="Twitter">
+            </div>
+            <div class="col-sm-1">
+              <img src="../images/Facebook Icon.png" alt="Facebook">
+            </div>
+            <div class="col-sm-1">
+              <img src="../images/Google Icon.png" alt="Google Plus">
+            </div>
+            <div class="col-sm-1">
+              <img src="../images/Tumblr Icon.png" alt="Tumblr">
+            </div>
+          </div>
+          <form class="row">
+            <div class="row">
+              <div class="col mb-3">
+                <label for="subscribe">Subscribe</label>
+                <div class="input-group">
+                  <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-dark rounded-0">SIGN UP</button>
+                  </span>
+                </div>
               </div>
-              <button type="submit" class="btn btn-dark">SIGN UP</button>
             </div>
           </form>
         </div>
