--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div class="container-fluid homepage-background bg-dark img-fluid">
-      <nav class="navbar navbar-expand-lg row py-5 offset-md-1 justify-content-center">
+      <nav class="homepage-navbar navbar navbar-expand-lg row py-5 offset-md-1 justify-content-center">
         <div class="col">
           <a href="#" class="navbar-brand align-self-center mx-5">
             <img src="../images/cinch(white).png" alt="Cinch Logo">
           </a>
         </div>
-        <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around" id="navbarNavAltMarkup">
+        <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around">
           <div class="navbar-nav">
             <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Home</a>
             <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Features</a>
@@ -29,17 +29,17 @@
       </nav>
       <div class="container justify-content-center text-center" style="margin-top: 90px">
         <div class="row">
-          <div class="col"> 
-            <h1 class="homepage-tagline text-white">Welcome to</h1>
+          <div class="col homepage-tagline"> 
+            <h1 class="text-white">Welcome to</h1>
           </div> 
         </div>
         <div class="row">
-          <div class="col"> 
-            <h1 class="homepage-tagline text-white">Cinch Sports</h1>
+          <div class="col homepage-tagline"> 
+            <h1 class="text-white">Cinch Sports</h1>
           </div> 
         </div>
         <div class="row justify-content-center m-3">
-          <form>
+          <form class="homepage-search-form">
             <div class="form-row">
               <div class="col-6 px-0 my-3">
                 <input type="text" class="form-control rounded-0" placeholder="Organization Name">
@@ -59,56 +59,56 @@
         </div>
       </div>
     </div>
-    <div class="footer m-5 containter-fluid">
+    <div class="footer m-5 p-2 containter-fluid">
       <div class="row mx-5 justify-content-around">
         <div class="col mx-5">
           <div class="list-group">
             <span class="list-group-item border-0">Cinch Sports </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
           </div>
         </div>
         <div class="col">
           <div class="list-group">
             <span class="list-group-item border-0">Help </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
           </div>
         </div>
         <div class="col">
           <div class="list-group">
             <span class="list-group-item border-0">More </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Partners</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Affiliate Program</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Donate</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Cinch Sportswear</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
           </div>
         </div>
-        <div class="container col col-md-4 offset-md-1 justify-content-start">
+        <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
           <div class="row">
             follow us
           </div>
-          <div class="d-flex align-self-center row">
-            <div class="col-sm-1">
+          <div class="d-flex footer-images justify-content-md-start row">
+            <div class="col-md-1 px-0 mx-0">
               <img src="../images/Twitter Icon.png" alt="Twitter">
             </div>
-            <div class="col-sm-1">
+            <div class="col-md-1 px-0 mx-0">
               <img src="../images/Facebook Icon.png" alt="Facebook">
             </div>
-            <div class="col-sm-1">
+            <div class="col-md-1 px-0 mx-0">
               <img src="../images/Google Icon.png" alt="Google Plus">
             </div>
-            <div class="col-sm-1">
+            <div class="col-md-1 px-0 mx-0">
               <img src="../images/Tumblr Icon.png" alt="Tumblr">
             </div>
           </div>
           <form class="row">
             <div class="row">
-              <div class="col mb-3">
+              <div class="col my-5">
                 <label for="subscribe">Subscribe</label>
                 <div class="input-group">
                   <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
