--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
   <div class="container">
     <div class="search-nav row">
       <div class="col">
@@ -19,16 +18,24 @@
           <button class="navbar-toggler" type="button"        aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        </nav>
       </div>
       <div class="col search-logo">
         <img src="../images/cinch(black).png" alt="Cinch Logo">
       </div>
       <div class="col search-membership-buttons">
-        <form class="form-inline col">
-          <button class="btn btn-light nav-link border-0 rounded-0">Login</button>
-          <button class="btn nav-link border-0 rounded-0">Sign Up</button>
+        <form class="form-inline">
+          <div class="col">
+            <button class="btn btn-light nav-link border-0 rounded-0">
+              Login
+            </button>
+          </div>
+          <div class="col">
+            <button class="btn nav-link border-0 rounded-0">
+              Sign Up
+            </button>
+          </div>
         </form>
+        </nav>
       </div>
     </div>
     <div class="row">
@@ -93,68 +100,73 @@
         </div>
       </div>
     </div>
-      <div class="row mx-5 justify-content-around">
-        <div class="col mx-5">
-          <div class="list-group">
-            <span class="list-group-item border-0">Cinch Sports </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">About Cinch</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Blog</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Cinch Store</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Developers</a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="list-group">
-            <span class="list-group-item border-0">Help </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Help Center</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Video School</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">FAQ</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0">Forums</a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="list-group">
-            <span class="list-group-item border-0">More </span>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Partners</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Affiliate Program</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Donate</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0">Cinch Sportswear</a>
-          </div>
-        </div>
-        <div class="container col col-md-4 offset-md-1 justify-content-start">
-          <div class="row">
-            follow us
-          </div>
-          <div class="d-flex align-self-center row">
-            <div class="col-sm-1">
-              <img src="../images/Twitter Icon.png" alt="Twitter">
-            </div>
-            <div class="col-sm-1">
-              <img src="../images/Facebook Icon.png" alt="Facebook">
-            </div>
-            <div class="col-sm-1">
-              <img src="../images/Google Icon.png" alt="Google Plus">
-            </div>
-            <div class="col-sm-1">
-              <img src="../images/Tumblr Icon.png" alt="Tumblr">
+    <div class="row mx-5 justify-content-around">
+      <div class="footer m-5 p-2 containter-fluid">
+        <div class="row mx-5 justify-content-around">
+          <div class="col mx-5">
+            <div class="list-group">
+              <span class="list-group-item border-0">Cinch Sports </span>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
             </div>
           </div>
-          <form class="row">
-            <div class="row">
-              <div class="col mb-3">
-                <label for="subscribe">Subscribe</label>
-                <div class="input-group">
-                  <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
-                  <span class="input-group-btn">
-                    <button type="submit" class="btn btn-dark rounded-0">SIGN UP</button>
-                  </span>
-                </div>
+          <div class="col">
+            <div class="list-group">
+              <span class="list-group-item border-0">Help </span>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="list-group">
+              <span class="list-group-item border-0">More </span>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
+              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
+            </div>
+          </div>
+          <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
+            <div class="row pb-3">
+              follow us
+            </div>
+            <div class="d-flex footer-images justify-content-md-start row">
+              <div class="col-md-1 px-0 mx-0">
+                <img src="../images/Twitter Icon.png" alt="Twitter">
+              </div>
+              <div class="col-md-1 px-0 mx-0">
+                <img src="../images/Facebook Icon.png" alt="Facebook">
+              </div>
+              <div class="col-md-1 px-0 mx-0">
+                <img src="../images/Google Icon.png" alt="Google Plus">
+              </div>
+              <div class="col-md-1 px-0 mx-0">
+                <img src="../images/Tumblr Icon.png" alt="Tumblr">
               </div>
             </div>
-          </form>
+            <form class="row">
+              <div class="row">
+                <div class="col my-5 pb-3">
+                  <label for="subscribe">Subscribe</label>
+                  <div class="input-group">
+                    <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-dark rounded-0">
+                        SIGN UP
+                      </button>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-  </div>
+    </div>
 </body>
 
 </html>
