--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
-          <div class="row">
+          <div class="row pb-3">
             follow us
           </div>
           <div class="d-flex footer-images justify-content-md-start row">
@@ -108,8 +108,8 @@
           </div>
           <form class="row">
             <div class="row">
-              <div class="col my-5">
-                <label for="subscribe">Subscribe</label>
+              <div class="col my-4">
+                <label for="subscribe" class="pb-3">Subscribe</label>
                 <div class="input-group">
                   <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
                   <span class="input-group-btn">
