--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -12,30 +12,47 @@
 
 <body>
   <div class="container text-center">
-    <h2>Login</h2>
-  <div class="card">
-    <div class="card-body">
-      <img src="../images/cinch(black).png" alt="Cinch Logo">
-      +
-      <img src="../images/Arsenal_FC.svg.png" alt="Arsenal Logo">
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email Address">
-        </div>
-        <div class="form-group">
-          <label for="login-password">Password</label>
-          <input type="password" class="form-control" id="login-password" placeholder="Password">
-        </div>
-        <div class="col text-center justify-content-center">
-          <button type="submit" class="btn btn-dark">Submit</button>
-          <button type="submit" class="btn btn-primary"> <img src="../images/Facebook Logo.png"> Sign in with Facebook</button>
-          <button type="submit" class="btn btn-light"> <img src="../images/logo_googleg_48dp.png"> Sign in with Google</button>
-        </div>
-      </form>
+    <h2 class="login-header-text my-5">Login</h2>
+    <div class="card login-container mx-auto mb-2 py-3">
+      <div class="card-body login-form-box py-4">
+        <img src="../images/bitmap.png" class="login-header-image" alt="Cinch Logo">
+        <span> + </span>
+        <img src="../images/Arsenal_FC.svg.png" class="login-header-image" alt="Arsenal Logo">
+        <form>
+          <div class="row justify-content-center my-2">
+            <div class="form-group col-md-12 text-left">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control py-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email Address">
+            </div>
+          </div>
+          <div class="row justify-content-center my-3">
+            <div class="form-group col-md-12 text-left">
+              <label for="login-password">Password</label>
+              <input type="password" class="form-control py-3" id="login-password" placeholder="Password">
+            </div>
+          </div>
+          <div class="col text-center align-items-center">
+            <div class="row justify-content-center">
+              <button type="submit" class="btn btn-cinch btn-block py-3 my-1">Login</button>
+            </div>
+            <div class="row justify-content-center">
+              <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2"> 
+                <img src="../images/Facebook Logo.png"> Sign in with Facebook
+              </button>
+            </div>
+            <div class="row justify-content-center mb-4">
+              <button type="submit" class="btn btn-google btn-block mt-2 mb-5 btn-outline-light py-2 text-dark"> 
+                <img src="../images/logo_googleg_48dp.png"> Sign in with Google
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+    <h6>Don't have a Cinch Account? 
+      <a class="text-dark px-3" href="#"><u>Create an Account</u></a>
+    </h6>
   </div>
-  <h6>Don't have a Cinch Account? <a href="#">Create an Account </a></h6>
 </body>
 
 </html>
